--- a/doc/2. 什么是NodeJs.md
+++ b/doc/2. 什么是NodeJs.md
@@ -1,19 +1,88 @@
 # 什么是NodeJs
 
 - [什么是NodeJs](#什么是nodejs)
-  - [NodeJs的概念](#nodejs的概念)
-  - [NodeJs的特性](#nodejs的特性)
-  - [NodeJs的优缺点](#nodejs的优缺点)
+  - [概念](#概念)
+    - [单线程](#单线程)
+    - [非阻塞IO](#非阻塞io)
+  - [异步的事件驱动](#异步的事件驱动)
+  - [轻量、适合可伸缩应用开发、适用实时交互应用](#轻量适合可伸缩应用开发适用实时交互应用)
+  - [特性](#特性)
+    - [高并发](#高并发)
+  - [优缺点](#优缺点)
+  - [参考文章](#参考文章)
 
-## NodeJs的概念
+## 概念
 
-Node.js 是一个开源与跨平台的 JavaScript 运行环境。
+> Node.js 是一个开源与跨平台的 JavaScript 运行环境。
+
+-- 这是[官方网站](https://nodejs.org/en/)的描述
+
+以下特性皆是通过官方文档中关于NodeJs的描述 https://nodejs.org/en/about/ 中的归纳总结
+
+它具备如下特性:
+
+- 单线程、所以无锁，无需担心死锁的问题
+- 非阻塞IO: 除了标准库的同步方法执行IO时,进程永远不会阻塞
+- 异步的事件驱动
+- 轻量、适合可伸缩应用开发、适用实时交互应用
 
 它依赖 V8 JavaScript 引擎(Goole Chrome浏览器的内核) 去解析和执行Js代码，使Js代码可以在服务器端运行。
 
-javascript是一门解释型编程语言。
+下面将针对上述特性一一进行详细描述:
 
-## NodeJs的特性
+### 单线程
 
-## NodeJs的优缺点
+Javascript仅仅是一门解释型语言，与平台无关，ECMAScirpt没有规定要有对net、fileSystem、dataBase等单元操作的能力。
+但是当用作服务器开发时，网络、文件系统的操作是必不可少的。
+所以NodeJs将这些操作封装为标准的JavascitptAPI，供用户调用，使Javascirpt在NodeJs中运行时具备了操作这些功能单元的能力。
 
+用户在开发时，只需要编写Javascript代码，而不需要关心这些API在底层是如何实现的。
+
+NodeJs在工作时会有很多的线程，但是执行javascript代码的线程只有一个，也就是说，用户编写的js代码，全部是在一个线程中完成的。
+
+所以才说Nodejs是单线程的。由于js的代码都是一个线程中执行，所以就不存在死锁的概念了。
+
+### 非阻塞IO
+
+[传统IO的阻塞和非阻塞](https://blog.csdn.net/weixin_53153139/article/details/127349948)指的是用户调用和内核之间的等待关系。
+
+在[NodeJs中的定义](https://nodejs.org/en/docs/guides/blocking-vs-non-blocking/)如下:
+
+阻塞是指在 Node.js 进程中执行其他 JavaScript 必须等到非 JavaScript 操作完成
+
+## 异步的事件驱动
+
+事件驱动中同步和异步的概念:
+
+同步: 需要调用者定时轮询，查询状态来确定事件是否完成
+异步: 事件做完之后，会自己调用一个回调函数，以此来发送通知
+
+事件循环:https://nodejs.org/en/docs/guides/event-loop-timers-and-nexttick/
+
+## 轻量、适合可伸缩应用开发、适用实时交互应用
+
+https://www.educative.io/blog/scalable-systems-101#when
+
+## 特性
+
+- 高并发
+
+### 高并发
+
+[1百万连接仅消耗16G内存](https://blog.caustik.com/2012/08/19/node-js-w1m-concurrent-connections/)
+
+传统的Web服务的并发能力是如何实现的，又是如何计算的
+
+https://medium.com/the-node-js-collection/why-the-hell-would-you-use-node-js-4b053b94ab8e
+
+## 优缺点
+
+npm包管理工具也是它十分重要且不应该忽略的优点、但这不是nodejs的特性
+
+- https://www.php.cn/js-tutorial-409410.html
+- https://blog.csdn.net/qq_30071415/article/details/117434223
+
+## 参考文章
+
+- http://t.zoukankan.com/linuxtop-p-12422383.html
+- [Why the Hell Would You Use Node.js](https://medium.com/the-node-js-collection/why-the-hell-would-you-use-node-js-4b053b94ab8e)
